[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
authors = ["bblackyyyy"]
description = "A simple calculator"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

slint = "1.3"


[build-dependencies]
slint-build = "1.3"
winres = "0.1"

[package.metadata.bundle]
name = "calculator"
version = "0.1.0"
